--- a/_sources/handson/H2-FAIRdata.ipynb
+++ b/_sources/handson/H2-FAIRdata.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# FAIRly share your data and code \n",
     "\n",
-    "**2023.03.07**\n",
+    "**2023.03.07, 2023.03.14**\n",
     "\n",
     "## Goals\n",
     "\n",
@@ -53,9 +53,14 @@
     "\n",
     "## Goal 2 procedure\n",
     "\n",
-    "### Register a Github account \n",
+    "We assume you already have a Github account. If not, it won't take much time to register one 🙂\n",
     "\n",
     "### Create a Github repository\n",
+    "\n",
+    "On Github, go to \"Your repositories\" and you'll see the page as below. Click the green button saying \"New.\"\n",
+    "\n",
+    "![something](figs/Github-scr1.png)\n",
+    "\n",
     "\n",
     "### Clone this Github repository to your local machine\n",
     "\n",
