--- a/_sources/handson/H2-FAIRdata.ipynb
+++ b/_sources/handson/H2-FAIRdata.ipynb
@@ -59,29 +59,75 @@
     "\n",
     "On Github, go to \"Your repositories\" and you'll see the page as below. Click the green button saying \"New.\"\n",
     "\n",
-    "![something](figs/Github-scr1.png)\n",
+    "![Github-scr1](figs/Github-scr1.png)\n",
     "\n",
+    "If you have decided a license you are going to use for this repository, you can choose it from the drop-down menu here. Otherwise, you can leave it blank and specify the license later. Any material without a given license is completely copyrighted. \n",
+    "\n",
+    "If you are new to Git/Github, you can also skip the `Add .gitignore` section. \n",
+    "\n",
+    "After you create a new repository, you can try to add any content using the interface provided by Github (e.g., the \"Add file\" button).\n",
     "\n",
     "### Clone this Github repository to your local machine\n",
     "\n",
     "Remember that we will use the [Callysto Hub](https://hub.callysto.ca/) as the local machine, although it's technically on the cloud. \n",
     "\n",
+    "Once you log into the Callysto Hub, change the URL from https://hub-xx.callysto.ca/jupyter/user/xxx..../tree to https://hub-xx.callysto.ca/jupyter/user/xxx..../lab for the JupyterLab GUI. Click the blue buttom with a plus sign on it to open the launcher page.\n",
+    "\n",
+    "![CallystoHub-scr1](figs/CallystoHub-scr1.png)\n",
+    "\n",
+    "Initiate a terminal session by clicking the terminal icon on the launcher page. New you can clone the repository we just created on Callysto using the following command-line prompt:\n",
+    "\n",
     "`git clone https://github.com/YOUR-ID/YOUR-REPO-NAME.git`\n",
+    "\n",
+    "**You have to change** `YOUR-ID` **to your Github user name and** `YOUR-REPO-NAME` **to the repositry name you want to be cloned.** Once done, you should see a new folder in the left sidebar (file browser) that shows the repository name. Now you have copied the content from Github to Callysto and can continue to add new content on Callysto.\n",
     "\n",
     "### Make commits and push them to Github\n",
     "\n",
-    "To use git the first time on a machine, you'll need to configure it. \n",
+    "Once you have new content in the repository, it is time to tell Git to track the change. This is an action called a \"commit.\" \n",
+    "\n",
+    "To commit the first time on a machine, you'll need to configure the following information: \n",
+    "\n",
+    "````{margin}\n",
+    "```{note}\n",
+    "The third line of the code is actually optional since it just specifies the preferred text editor \"nano\" for commits. If a text editor is not specified, Git will use the system default (which is `vim` on Callysto).\n",
+    "```\n",
+    "````\n",
     "\n",
     "```\n",
     "git config --global user.name \"YOUR NAME\"\n",
     "git config --global user.email \"YOUR.EMAIL@some.domain.edu\"\n",
+    "git config --global core.editor \"nano\"\n",
     "```\n",
+    "\n",
+    "Now you can commit new content by the following commands: (Make sure your terminal is at the right path before doing this!) \n",
+    "```\n",
+    "git add .\n",
+    "git commit\n",
+    "```\n",
+    "\n",
+    "If you want to update the remote repository with the new changes (aka to \"Push\"), you have to [create a Github personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token#creating-a-personal-access-token-classic) for security purposes. Once you have it, type the command below in the terminal:\n",
+    "\n",
+    "```\n",
+    "git push\n",
+    "```\n",
+    "\n",
+    "Enter your Github username and the access token -- now the commits have been pushed to Github!\n",
     "\n",
     "### Link the Github repository to Zenodo\n",
     "\n",
+    "At any time during the developement, you can hook the repository on Zenodo by going to Zenodo's \"Github\" settings:\n",
+    "\n",
+    "![Zenodo-scr1](figs/Zenodo-scr1.png)\n",
+    "\n",
+    "Flip the switch to `on`, and you are done!\n",
+    "\n",
     "### Create a release\n",
     "\n",
-    "After you create a release, wait for a while (it could take from a few minutes to a few days) and go to Zenodo. Now you should be able to see your repository appeared as an upload with a DOI issued to it!"
+    "When you are ready to publish the repository, create a release on Github: \n",
+    "\n",
+    "![Github-scr2](figs/Github-scr2.png)\n",
+    "\n",
+    "We need to wait for a while for the release to be registered on Zenodo (which could take from a few minutes to a few days), but once it is done, you should be able to see your repository appeared as an upload with a DOI linked to it!"
    ]
   },
   {
