--- a/docs/handson/H3-Reproducibility.ipynb
+++ b/docs/handson/H3-Reproducibility.ipynb
@@ -44,6 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#### This sample code was auto-generated using Bing's ChatGPT AI (GPT-4).\n",
+    "\n",
     "import numpy as np\n",
     "from scipy import optimize\n",
     "\n",
@@ -79,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#### This sample code was modified from ipyleaflet's demo examples.\n",
     "from ipyleaflet import Map, basemaps, basemap_to_tiles, Marker\n",
     "\n",
     "center = (24.9677, 121.1870)\n",
@@ -148,7 +151,9 @@
    "id": "ecd793de-adcd-484f-a9c1-354972d23916",
    "metadata": {},
    "source": [
-    "Commit the change and push them to Github. Now you can go to [MyBinder.org](https://mybinder.org/) and enter the repository URL to initialize the serval with all the reproducible content from your repository!"
+    "This file follows the [**YAML**](https://en.wikipedia.org/wiki/YAML) format and tells **conda** (one of the package managers Binder supports) what packages to be installed. Based on the code we added above, we will need `numpy`, `scipy`, and `ipyleaflet`. We will also need Python to execute the code, but it is optional to list Python here because it will be installed as a dependency of all three packages.\n",
+    "\n",
+    "Commit the change and push them to Github. Now you can go to [MyBinder.org](https://mybinder.org/) and enter the repository URL to initialize the server with all the reproducible content from your repository!"
    ]
   },
   {
