--- a/_sources/handson/H3-Reproducibility.ipynb
+++ b/_sources/handson/H3-Reproducibility.ipynb
@@ -119,7 +119,7 @@
    "id": "18c1b46e-db8c-4879-b85c-c2de2b2ad147",
    "metadata": {},
    "source": [
-    "Now you can restart the kernel and run the Notebook again to see the correct output.\n",
+    "Now you can restart the kernel and run the Notebook again to see the correct output. (*Note: you will need to install ipyleaflet every time when you start a Callysto Hub session.*)\n",
     "\n",
     "When you are done adding these files, you can commit the changes and push them to Github.\n",
     "\n",
@@ -153,16 +153,12 @@
    "source": [
     "This file follows the [**YAML**](https://en.wikipedia.org/wiki/YAML) format and tells **conda** (one of the package managers Binder supports) what packages to be installed. Based on the code we added above, we will need `numpy`, `scipy`, and `ipyleaflet`. We will also need Python to execute the code, but it is optional to list Python here because it will be installed as a dependency of all three packages.\n",
     "\n",
-    "Commit the change and push them to Github. Now you can go to [MyBinder.org](https://mybinder.org/) and enter the repository URL to initialize the server with all the reproducible content from your repository!"
+    "Commit the change and push them to Github. Now you can go to [MyBinder.org](https://mybinder.org/) and enter the repository URL to initialize the server with all the reproducible content from your repository:\n",
+    "\n",
+    "![Binder](figs/Binder-scr1.png)\n",
+    "\n",
+    "MyBinder will take some time building the Docker image based on `environment.yml` and the other files in the repository. When it is finished, you should be able to see a JupyterLab (or Jupyter Notebook tree view) GUI with all the content (specifically `scipy_test.py` and `ipyleaflet.ipynb`) ready to be executed! "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e74552d-6cd7-43f7-a0b8-0c09bb491780",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
