--- a/docs/handson/H3-Reproducibility.ipynb
+++ b/docs/handson/H3-Reproducibility.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Achieving 100% reproducibility\n",
     "\n",
-    "**2023.03.21**\n",
+    "**2023.03.21, 2023.03.28**\n",
     "\n",
     "In this handsd-on session we will continue to use the test repository you just created and make it 100% reproducible with the help of [mybinder.org](https://mybinder.org/).\n",
     "\n",
@@ -157,8 +157,20 @@
     "\n",
     "![Binder](figs/Binder-scr1.png)\n",
     "\n",
-    "MyBinder will take some time building the Docker image based on `environment.yml` and the other files in the repository. When it is finished, you should be able to see a JupyterLab (or Jupyter Notebook tree view) GUI with all the content (specifically `scipy_test.py` and `ipyleaflet.ipynb`) ready to be executed! "
+    "MyBinder will take some time building the Docker image based on `environment.yml` and the other files in the repository. When it is finished, you should be able to see a JupyterLab (or Jupyter Notebook tree view) GUI with all the content (specifically `scipy_test.py` and `ipyleaflet.ipynb`) ready to be executed! \n",
+    "\n",
+    "## More resources\n",
+    "\n",
+    "If you want to learn Python, there are tons of websites with a cloud executable environment so that you can code on your browser. In addition to [Callysto's learning modules](https://www.callysto.ca/learning-modules/), some of the executable-in-situ Python tutorials (free+paid plans) include but not limited to [Brilliant](https://brilliant.org/), [Codecademy](https://www.codecademy.com/), and [DataCamp](https://www.datacamp.com/). You might also want to check out the unfinished *Learning Python with Jupyter* book at https://learnpythonwithjupyter.com/ with downloadable Jupyter Notebook exercises. (*Disclaimer: I have no conflict of interest with any of the companies/organiztions mentioned here.*)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b47cb73-ea7e-4353-9720-f78a4c340d61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
