--- a/docs/handson/H4-Narrative.ipynb
+++ b/docs/handson/H4-Narrative.ipynb
@@ -12,7 +12,7 @@
     "This tutorial will provide introduction to Jupyter Book, a powerful tool for writing narrative science. I also used it to create the course webpages.\n",
     "\n",
     "(narrative_science)=\n",
-    "### What is narrative science?\n",
+    "## What is narrative science?\n",
     "\n",
     "Like other trendy words in data science, we don't have a common agreement about what it means by narrative science. Here we will use the following definition: narrative science is a concept to write a piece that provides scientific and technical details in a research project with a narrative (i.e., context-based) structure so that readers can digest all the information in the text without cross-referencing. {cite}`Dahlstrom2014`\n",
     "\n",
@@ -197,11 +197,11 @@
     "\n",
     "Commit and push the change above. On the GitHub repository page, go to settings -> Page. Make sure to the settings like this figure shows:\n",
     "\n",
-    "(a figure pages)\n",
+    "![Github-scr3](figs/Github-scr3.png)\n",
     "\n",
     "Wait a moment until the yellow dot turns green:\n",
     "\n",
-    "(a figure green dot)\n",
+    "![Github-scr4](figs/Github-scr4.png)\n",
     "\n",
     "Now you should be able to see the Notebook published on your GitHub pages! \n",
     "\n",
@@ -213,15 +213,22 @@
     "For how to configure Jupyter Book settings, see [this page](https://jupyterbook.org/en/stable/customize/config.html). (I always use this configuration template as a good start.)\n",
     "\n",
     "\n",
-    "\n",
     "```{bibliography}\n",
-    "```"
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "bb13eca6-eabb-4f5c-b3d7-47c3d157aef7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e70f6bb8-0425-4163-b113-906f22d146c5",
    "metadata": {},
    "outputs": [],
    "source": []
