--- a/_sources/handson/H4-Narrative.ipynb
+++ b/_sources/handson/H4-Narrative.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "## [Jupyter Book](https://jupyterbook.org/)\n",
     "\n",
-    "![Jupyter Book](https://jupyterbook.org/en/stable/_static/logo-wide.svg)\n",
+    "<!-- ![Jupyter Book](https://jupyterbook.org/en/stable/_static/logo-wide.svg) -->\n",
     "\n",
     "The [Jupyter Book](https://jupyterbook.org/) package coordinates several tools in the Python ecosystem for publishing science and technical writing pieces. Some of the most relevant tools include\n",
     "\n",
