Add final term paper template

--- a/docs/handson/H3-Reproducibility.ipynb
+++ b/docs/handson/H3-Reproducibility.ipynb
@@ -161,7 +161,7 @@
     "\n",
     "## More resources\n",
     "\n",
-    "If you want to learn Python, there are tons of websites with a cloud executable environment so that you can code on your browser. In addition to [Callysto's learning modules](https://www.callysto.ca/learning-modules/), some of the executable-in-situ Python tutorials (free+paid plans) include but not limited to [Brilliant](https://brilliant.org/), [Codecademy](https://www.codecademy.com/), and [DataCamp](https://www.datacamp.com/). You might also want to check out the unfinished *Learning Python with Jupyter* book at https://learnpythonwithjupyter.com/ with downloadable Jupyter Notebook exercises. (*Disclaimer: I have no conflict of interest with any of the companies/organiztions mentioned here.*)"
+    "If you want to learn Python, there are tons of websites with a cloud executable environment so that you can code on your browser. In addition to [Callysto's learning modules](https://www.callysto.ca/learning-modules/), some of the executable-in-situ Python tutorials (free+paid plans) include but not limited to [Brilliant](https://brilliant.org/), [Codecademy](https://www.codecademy.com/), and [DataCamp](https://www.datacamp.com/). You might also want to check out the unfinished *Learning Python with Jupyter* book at https://learnpythonwithjupyter.com/ with downloadable Jupyter Notebook exercises. (*Disclaimer: I have no conflict of interest with any of the companies/organizations mentioned here.*)"
    ]
   },
   {
