--- a/_sources/handson/H4-Narrative.ipynb
+++ b/_sources/handson/H4-Narrative.ipynb
@@ -144,7 +144,7 @@
     "  execute_notebooks         : off  # Whether to execute notebooks at build time. Must be one of (\"auto\", \"force\", \"cache\", \"off\")\n",
     "```\n",
     "\n",
-    "Now you should be ready to run compile `index,ipynb` as a Book. Open the terminal, go to where these two files are located, and enter the following command:\n",
+    "Now you should be ready to run compile `index.ipynb` as a Book. Open the terminal, go to where these two files are located, and enter the following command:\n",
     "\n",
     "```bash\n",
     "jupyter-book build .\n",
@@ -203,7 +203,7 @@
     "\n",
     "![Github-scr4](figs/Github-scr4.png)\n",
     "\n",
-    "Now you should be able to see the Notebook published on your GitHub pages! \n",
+    "Now you should be able to see the Notebook published on your GitHub pages at https://[YOUR_ACCOUNT_NAME].github.io/[REPOSITORY_NAME]! \n",
     "\n",
     "\n",
     "## More resources\n",
