--- a/_sources/handson/H4-Narrative.ipynb
+++ b/_sources/handson/H4-Narrative.ipynb
@@ -156,7 +156,11 @@
     "\n",
     "We can create an automatic workflow on GitHub to run Jupyter Book and publish the HTMLs to GitHub pages every time you push any new content.\n",
     "\n",
-    "First commit and push all the changes above. Now go back to the repository folder on Callysto Hub. Create a file named `build.yml` in \n",
+    "First commit and push all the changes above. On the Github repository site, make sure you have the GitHub workflow permission set to both read and write by going to Settings -> Actions -> Workflow permissions, as this figure shows:\n",
+    "\n",
+    "![Github-scr4](figs/Github-scr5.png)\n",
+    "\n",
+    "Now go back to the repository folder on Callysto Hub. Create a file named `build.yml` in \n",
     "`.github/workflows` (you might need to create this folder too). Add the following content to `build.yml`:\n",
     "\n",
     "```\n",
