--- a/docs/handson/H4-Narrative.ipynb
+++ b/docs/handson/H4-Narrative.ipynb
@@ -7,14 +7,15 @@
    "source": [
     "# Writing narrative science \n",
     "\n",
-    "**2023.04.18, 2023.04.25, 2023.05.02**\n",
+    "<!-- **2023.04.18, 2023.04.25, 2023.05.02** -->\n",
+    "**2024.11.05, 2024.11.12**\n",
     "\n",
-    "This tutorial will provide introduction to Jupyter Book, a powerful tool for writing narrative science. I also used it to create the course webpages.\n",
+    "This tutorial will provide an introduction to Jupyter Book, a powerful tool for writing narrative science. I also used it to create the course webpages.\n",
     "\n",
     "(narrative_science)=\n",
     "## What is narrative science?\n",
     "\n",
-    "Like other trendy words in data science, we don't have a common agreement about what it means by narrative science. Here we will use the following definition: narrative science is a concept to write a piece that provides scientific and technical details in a research project with a narrative (i.e., context-based) structure so that readers can digest all the information in the text without cross-referencing. {cite}`Dahlstrom2014`\n",
+    "Like other trendy words in data science, we don't have a common agreement about what it means by narrative science. Here we will use the following definition: narrative science is a concept of writing a piece that provides scientific and technical details in a research project with a narrative (i.e., context-based) structure so that readers can digest all the information in the text without cross-referencing. {cite}`Dahlstrom2014`\n",
     "\n",
     "We will talk more about this during the lecture discussion.\n",
     "\n",
@@ -254,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
