--- a/_sources/handson/H1-Jupyter.ipynb
+++ b/_sources/handson/H1-Jupyter.ipynb
@@ -5,64 +5,60 @@
    "id": "a72c56c8-66f8-4e93-b823-1f4b3dcb011e",
    "metadata": {},
    "source": [
-    "# Our working environment: Jupyter\n",
+    "# Our working environment\n",
     "\n",
-    "<!-- **2023.02.21** -->\n",
-    "**2024.09.24**\n",
+    "## 1 | [Jupyter](https://jupyter.org/)\n",
     "\n",
-    "![Jupyter](https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Jupyter_logo.svg/207px-Jupyter_logo.svg.png)\n",
+    "![Jupyter](https://jupyter.org/assets/logos/rectanglelogo-greytext-orangebody-greymoons.svg)\n",
     "By Project Jupyter, [BSD-3-Clause license](https://github.com/jupyter/jupyter.github.io/blob/master/LICENSE)\n",
     "\n",
-    "**Jupyter** provides environments and tools designed for performing data science on the cloud. [Project Jupyter landing page](https://jupyter.org/)\n",
+    "**Project Jupyter** develops and provides various tools, standards, and services for a range of purposes. The word \"Jupyter\" originates from combining three popular programming languages in data science: Julia, Python, and R, but now it has become a symbol of the community who are engaged with each other using Jupyter tools.\n",
     "\n",
-    "## [Callysto](https://www.callysto.ca/)\n",
+    "This course will introduce many of Project Jupyter's products, which are great ways to explore open science practices.\n",
     "\n",
-    "![Callysto](https://www.callysto.ca/wp-content/uploads/2020/10/Callysto-Logo_Hor_Colour-768x242.png)\n",
+    "### 🛠️ Try Jupyter\n",
+    "\n",
+    "Go to the [Project Jupyter landing page](https://jupyter.org/), scroll down to the JupyterLab project, and hit \"Try it in your browser.\" Then hit \"JupyterLab\" in the Applications Section. You will be entering a web server using JupyterLab interface as an entry point. \n",
+    "\n",
+    "🚩 **Task:** Try to execute the Python cell in `Intro.ipynb` and reproduce the figure with many yellow-green-blueish dots!\n",
+    "\n",
+    "🚩 **Task:** Navigate to `Lorenz.ipynb` and open it. Execute several cells until you see an interactive widget showing the results of a Lorenz system.\n",
+    "\n",
+    "❓ **Question:** Can you adjust the parameters so that the system looks like this?\n",
+    "\n",
+    "![Lorenz system](figs/lorenz.png)\n",
+    "\n",
+    "\n",
+    "## 2 | [Callysto](https://callysto.ca/)\n",
+    "\n",
+    "![Callysto](https://callysto.ca/media/logo-transparent-background_hu7e18fb676e74a5d007052d00f645e01e_31947_0x36_resize_q95_h2_lanczos_3.webp)\n",
     "By Callysto, [CC-BY 4.0](http://creativecommons.org/licenses/by/4.0/)\n",
     "\n",
-    "As a non-profit program aiming for improving teaching data science in Canada, Callysto hosts the Callysto hub, a free online tool with the Jupyter-based interface and computational resources for everyone.\n",
+    "As a non-profit program aiming to improve teaching data science in Canada, Callysto provides lots of materials and learning modules for K-12 classrooms. Callysto also hosts the Callysto hub, a free online Jupyter server (**JupyterHub**) pre-loaded with these modules. \n",
     "\n",
-    "You'll need a Google or Microsoft account to sign into the Callysto Hub.\n",
+    "We will be using Callysto Hub throughout the course as a platform for the hands-on session. This is not a requirement, though, if you are willing and able to install JupyterLab or Jupyter Notebook on your local machine.\n",
     "\n",
-    "[Callysto Hub landing page](https://hub.callysto.ca/)\n",
+    "### 🛠️ Try Callysto\n",
     "\n",
-    "## Once you log in...\n",
+    "Go to [Callysto Hub landing page](https://hub.callysto.ca/) and sign in. You'll need a Google or Microsoft account for this.\n",
     "\n",
-    "Here are things you can do:\n",
+    "Once you are logged in and activate Jupyter, you can see a **Jupyter Notebook** landing page with a URL as `https://hub-xx.callysto.ca/jupyter/user/xxx..../tree`. This is Jupyter Notebook's **tree view** interface. If you double-click `getting-started.ipynb`, a **Notebook view** browser page will pop up showing the content of the notebook.\n",
     "\n",
-    "### Familarize yourself with Jupyter Notebook / JuyterLab\n",
+    "🚩 **Task:** While you are on the tree view page, switch to the JupyterLab interface by changing the URL to `https://hub-xx.callysto.ca/jupyter/user/xxx..../lab` (i.e., by replacing `tree` with `lab`). Now you should be able to see a similar interface we explored during the previous task. In fact, the JupyterLab interface is like Jupyter Notebook 2.0 for some people.\n",
     "\n",
-    "Your first hub landing place should be `https://hub-xx.callysto.ca/jupyter/user/xxx..../tree`, a traditional **Notebook tree view**.\n",
+    "### 🛠️ Callysto's learning modules\n",
     "\n",
-    "You can switch to a more advance JupyterLab interface by changing the URL to `https://hub-xx.callysto.ca/jupyter/user/xxx..../lab`. This is the JupyterLab interface (which is like Jupyter Notebook 2.0 for some people).\n",
+    "Now go back to [Callysto's project page](https://callysto.ca/), scroll down, and hit the \"Browse learning modules\" button. Here you can find lots of resources for K-12 teachers. Locate the \"Climate Change\" module and hit \"Click\". Now the relevant content has been imported into your account space in the Callysto Hub. You should be able to view the content `climate-change.ipynb` now.\n",
     "\n",
-    "### Get the learning resources from Callysto\n",
+    "🚩 **Task:** Execute the cells to visually explore Evidence 1 & 2 for the rapid climate change.\n",
     "\n",
-    "- Check out the [Callysto starter kit](https://www.callysto.ca/starter-kit/)!\n",
+    "❓ **Question**: Where is `climate-change.ipynb` located relative to your home directory?\n",
     "\n",
-    "- Find the `getting-started.ipynb` in the tree view or in the file browser panel. Open it and follow (run) the instruction there.\n",
-    "\n",
-    "- There's a lot of learning modules and other resources on Callysto for you to try Jupyter itself and learn data science!\n",
-    "\n",
-    "### Get resources on the Hub\n",
-    "\n",
-    "- You can download/import any files on the Callysto Hub, including additional learning resources. \n",
-    "\n",
-    "- The demo examples will be put on Github, and here are an example for downloading (clone) the Github content to your Callysto space: \n",
+    "<!-- - The demo examples will be put on Github, and here are an example for downloading (clone) the Github content to your Callysto space: \n",
     "\n",
     "`git clone https://github.com/pangeo-data/jupyter-earth.git`\n",
-    "\n",
-    "Try this command here!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d87c372-99c4-49c7-af89-c11c261d5ce5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git clone https://github.com/pangeo-data/jupyter-earth.git"
+    "Try this command here!\n",
+    "!git clone https://github.com/pangeo-data/jupyter-earth.git -->"
    ]
   },
   {
@@ -70,17 +66,20 @@
    "id": "1dfe0046-e474-4037-b290-67df205d22aa",
    "metadata": {},
    "source": [
-    "This Github repository contains raw files presented at [here](https://jupytearth.org/).\n",
+    "## 3 | More resources\n",
     "\n",
-    "## More resources\n",
+    "Here are some links to help you get familiar with JupyterLab, Linux (on which JupyterLab is built), and BASH.\n",
     "\n",
-    "- Shell (bash):\n",
-    "  - [鳥哥的學習私房手冊 (中文)](https://linux.vbird.org/linux_basic/centos7/0320bash.php)\n",
-    "  - [Ryans Tutorials (English)](https://ryanstutorials.net/bash-scripting-tutorial/)\n",
-    "  \n",
+    "- [JupyterLab documentation](https://jupyterlab.readthedocs.io/en/latest/)\n",
+    "- [鳥哥私房菜 (中文)](https://linux.vbird.org/linux_basic/centos7/0320bash.php)\n",
+    "- [Ryans Tutorials (English)](https://ryanstutorials.net/bash-scripting-tutorial/)\n",
+    "\n",
+    "\n",
+    "\n",
+    "  <!-- \n",
     "- Git:\n",
     "  - [連猴子都能懂的 Git 入門指南 (中文)](https://backlog.com/git-tutorial/tw/)\n",
-    "  - [Git tutorial: An essential guide to a powerful integration (English)](https://nulab.com/learn/software-development/git-tutorial/git-basics/)"
+    "  - [Git tutorial: An essential guide to a powerful integration (English)](https://nulab.com/learn/software-development/git-tutorial/git-basics/) -->"
    ]
   },
   {
