--- a/docs/handson/H1-Jupyter.ipynb
+++ b/docs/handson/H1-Jupyter.ipynb
@@ -10,7 +10,6 @@
     "## 1 | [Jupyter](https://jupyter.org/)\n",
     "\n",
     "![Jupyter](https://jupyter.org/assets/logos/rectanglelogo-greytext-orangebody-greymoons.svg)\n",
-    "By Project Jupyter, [BSD-3-Clause license](https://github.com/jupyter/jupyter.github.io/blob/master/LICENSE)\n",
     "\n",
     "**Project Jupyter** develops and provides various tools, standards, and services for a range of purposes. The word \"Jupyter\" originates from combining three popular programming languages in data science: Julia, Python, and R, but now it has become a symbol of the community who are engaged with each other using Jupyter tools.\n",
     "\n",
@@ -18,7 +17,7 @@
     "\n",
     "### 🛠️ Try Jupyter\n",
     "\n",
-    "Go to the [Project Jupyter landing page](https://jupyter.org/), scroll down to the JupyterLab project, and hit \"Try it in your browser.\" Then hit \"JupyterLab\" in the Applications Section. You will be entering a web server using JupyterLab interface as an entry point. \n",
+    "Go to the [Project Jupyter landing page](https://jupyter.org/), scroll down to the **JupyterLab** project, and hit \"Try it in your browser.\" Then hit \"JupyterLab\" in the Applications Section. You will be entering a web server using JupyterLab interface as an entry point. \n",
     "\n",
     "🚩 **Task:** Try to execute the Python cell in `Intro.ipynb` and reproduce the figure with many yellow-green-blueish dots!\n",
     "\n",
@@ -32,7 +31,6 @@
     "## 2 | [Callysto](https://callysto.ca/)\n",
     "\n",
     "![Callysto](https://callysto.ca/media/logo-transparent-background_hu7e18fb676e74a5d007052d00f645e01e_31947_0x36_resize_q95_h2_lanczos_3.webp)\n",
-    "By Callysto, [CC-BY 4.0](http://creativecommons.org/licenses/by/4.0/)\n",
     "\n",
     "As a non-profit program aiming to improve teaching data science in Canada, Callysto provides lots of materials and learning modules for K-12 classrooms. Callysto also hosts the Callysto hub, a free online Jupyter server (**JupyterHub**) pre-loaded with these modules. \n",
     "\n",
