--- a/_sources/handson/H1-Jupyter.ipynb
+++ b/_sources/handson/H1-Jupyter.ipynb
@@ -70,20 +70,21 @@
     "\n",
     "- [JupyterLab documentation](https://jupyterlab.readthedocs.io/en/latest/)\n",
     "- [鳥哥私房菜 (中文)](https://linux.vbird.org/linux_basic/centos7/0320bash.php)\n",
-    "- [Ryans Tutorials (English)](https://ryanstutorials.net/bash-scripting-tutorial/)\n",
-    "\n",
-    "\n",
-    "\n",
-    "  <!-- \n",
-    "- Git:\n",
-    "  - [連猴子都能懂的 Git 入門指南 (中文)](https://backlog.com/git-tutorial/tw/)\n",
-    "  - [Git tutorial: An essential guide to a powerful integration (English)](https://nulab.com/learn/software-development/git-tutorial/git-basics/) -->"
+    "- [Ryans Tutorials (English)](https://ryanstutorials.net/bash-scripting-tutorial/)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8006c402-5421-47e7-b0a0-5e9f3e77a3e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bd9a157-760b-4cae-b7bf-65ff2067d45c",
    "metadata": {},
    "outputs": [],
    "source": []
